--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,17 @@ a {
     background-color: #e4b4ac;
 }
 
+.payment-section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.payment-section a {
+    width: 80px; /* Adjust this value to your desired width */
+    text-align: center;
+}
+
 /* Login and Register Page Styles */
 .login-container {
     display: flex;
