--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,8 @@ a {
 .book-detail {
     display: flex;
     margin-top: 20px;
-
+    margin-right: 10%;
+    margin-left: 10%;
     padding: 20px;
 }
 
