visual improvements on navbar

--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,11 @@ a {
     color: #e19192;
     margin-left: 70px;
     font-size: 18px;
-    /* font-weight: bold; */
 }
 
 .navbar a:hover {
-    color: #e4b4ac;
+    color: #e5715d;
+    font-weight: bold;
 }
 
 .logo img {
@@ -236,6 +236,11 @@ input[type="email"], input[type="password"], input[type="text"] {
     border-radius: 20px;
     background-color: white;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+.error-message {
+    color: red !important;
+    font-weight: bold !important;
 }
 
 /* Contact Form Page Styles */
